<resources>
    <string name="app_name">Hello Games</string>
    <string name="type">Type:</string>
    <string name="name">Name:</string>
    <string name="mb_players">Mb Players:</string>
    <string name="year">Year:</string>
    <string name="gameinfo">GameInfo</string>
    <string name="do_you_want_to_know_more">DO YOU WANT TO KNOW MORE ?</string>
    <string name="todo">TODO</string>
    <item type="id" name="glide_tag" />
</resources>